# dagster-notif-template

./: .env.example  .gitignore  .mailmap  README.md  pyproject.toml
src/: __init__.py  email.py  sensors.py  settings.py
src/assets/debug/: assets.py
