[tool.poetry]
name = "dagster-notif-template"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvd.studio>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
dagster = "^1.7.15"
dagster-webserver = "^1.7.15"
dagster-slack = "^0.23.15"
boto3 = "^1.34.150"
sendgrid = "^6.11.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"

[tool.dagster]
module_name = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
